
v0.7.1 -- xx yy 2005
--------------------
- ported to NetBSD 2.1
- RosterManager: use the group's name, not 'group' (thanks to Maciej Paszta)


v0.7 -- 02 Nov 2005
-------------------
- JEP-0004 (Data Forms) (complete, experimental)
- JEP-0013 (Flexible Offline Message Retrieval) (complete)
- JEP-0083 (Nested Roster Groups) (complete)
- JEP-0138 (Stream Compression) (experimental)
- removed pkg-config dependency (in check for iksemel)
- fixed pkg-config file (all libs)
- RosterItem: added status(); made setStatus() take a PresenceStatus
- RosterManager: added self-contact (optional; hard-wired in Client for now)
- Disco: no need to register the handler to receive query results (still necessary for 'set's)
- PrivateXML: no need to register the handler to store or receive private XML
- added IQ error handling in PrivateXML class
- port to Win32; SRV lookups do not work. See README.win32 for more information.
- some MacOS X #include fixes
- added Tag::clone() and Stanza::clone()
- added static functions to Stanza to create common packet types (IQ, Message, Presence, Subscription)
- gloox-config script
- call onDisconnect() in non-blocking connect() mode
- added debug notice about remote server not being XMPP compliant
- added an API docs notice about unsupported legacy SSL connections to port 5223
- fixed a presence related bug in Stanza, where presence always was reported as 'available' (thanks to
Luis Cidoncha)
- made code ISO C++ compliant (-pedantic et al.)
- various API doc fixes
- many more virtuals in the handler interfaces instead of empty functions
- export raw file descriptor
- got rid of libm(ath) dependency (by using ostringstream)
- always use pre-increment instead of post-increment in for-loops
- export classes on w32
- let configure check for libresolv
- don't use resolver functions on SkyOS for now (thanks to Peter Speybrouck & Robert Szeleney)
- made ClientBase::streamErrorAppCondition() const
- added ClientBase::removeConnectionListener()