@@ -3,6 +3,10 @@ v0.7.1 -- xx yy 2005
 --------------------
 - ported to NetBSD 2.1
 - RosterManager: use the group's name, not 'group' (thanks to Maciej Paszta)
+- RosterManager: update/set an item's name
+- include config.h.win in distribution
+- allow for presence broadcasting in Stanza::createPresenceStanza()
+
 
 
 v0.7 -- 02 Nov 2005
